--- a/sueDreams/sueWeb/src/main/webapp/index.xhtml
+++ b/sueDreams/sueWeb/src/main/webapp/index.xhtml
@@ -8,7 +8,7 @@
  
   <ui:define name="aplicacion">
     <h:panelGrid columns ="2">
-    <h:outputText value="testCabecera"/>
+    <h:outputText value="#{template.nombre1}"/>
     <h:outputText value="testCabecera"/>
     <h:outputText value="testCabecera"/>
     <h:outputText value="testCabecera"/>
