Cambios framework jueves 16 agosto 2012

--- a/sueDreams/sueWeb/src/main/webapp/index.xhtml
+++ b/sueDreams/sueWeb/src/main/webapp/index.xhtml
@@ -4,7 +4,7 @@
 <html xmlns="http://www.w3.org/1999/xhtml" xmlns:ui="http://java.sun.com/jsf/facelets"
     xmlns:f="http://java.sun.com/jsf/core" xmlns:h="http://java.sun.com/jsf/html">
  
-<ui:composition template="/templates/template.xhtml">
+<ui:composition template="templates/template.xhtml">
  
   <ui:define name="aplicacion">
   <img src="#{template.imagenConstruccion}" class="styleBuilding" />
