--- a/sueDreams/sueWeb/src/main/webapp/resources/componentes/menu.xhtml
+++ b/sueDreams/sueWeb/src/main/webapp/resources/componentes/menu.xhtml
@@ -1,52 +1,64 @@
 <!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Transitional//EN"
    "http://www.w3.org/TR/xhtml1/DTD/xhtml1-transitional.dtd">
 <html xmlns="http://www.w3.org/1999/xhtml"
-         xmlns:h="http://java.sun.com/jsf/html"
-         xmlns:f="http://java.sun.com/jsf/core"
-         xmlns:ui="http://java.sun.com/jsf/facelets"
-         xmlns:a4j="http://richfaces.org/a4j"
-	  	 xmlns:rich="http://richfaces.org/rich"
-         xmlns:composite="http://java.sun.com/jsf/composite">
-  <h:head>
- 
-   <title>This will not be present in rendered output</title>
- 
- </h:head>
- 
- <h:body>
- <composite:interface displayName="Input text field with label, input and message components" >
- </composite:interface>
- 
- <composite:implementation>
+	xmlns:h="http://java.sun.com/jsf/html"
+	xmlns:f="http://java.sun.com/jsf/core"
+	xmlns:ui="http://java.sun.com/jsf/facelets"
+	xmlns:a4j="http://richfaces.org/a4j"
+	xmlns:rich="http://richfaces.org/rich"
+	xmlns:composite="http://java.sun.com/jsf/composite">
+<h:head>
+
+	<title>This will not be present in rendered output</title>
+
+</h:head>
+
+<h:body>
+	<composite:interface
+		displayName="Input text field with label, input and message components">
+	</composite:interface>
+
+	<composite:implementation>
 		<rich:panelMenu mode="ajax" styleClass="styleMenu"
 			iconExpandedGroup="disc" iconCollapsedGroup="disc"
 			iconExpandedTopGroup="chevronUp" iconGroupTopPosition="right"
 			iconCollapsedTopGroup="chevronDown">
-			<rich:panelMenuGroup label="#{menu.opcion1}">
-				<rich:panelMenuItem label="#{menu.opcion1_1}"
-					action="commandButton">
-					<f:param name="current" value="Item 1.1" />
-				</rich:panelMenuItem>
-				<rich:panelMenuItem label="#{menu.opcion1_2}"
-					action="commandButton">
-					<f:param name="current" value="Item 1.2" />
-				</rich:panelMenuItem>
-				<rich:panelMenuItem label="#{menu.opcion1_3}"
-					action="commandButton">
-					<f:param name="current" value="Item 1.3" />
-				</rich:panelMenuItem>
+
+
+			<ui:repeat value="#{beans.allMapping.childs}" var="item1">
+				<rich:panelMenuGroup label="#{item1.value}">
+					<ui:repeat value="#{item1.childs}" var="item2">
+						<rich:panelMenuGroup label="#{item2.value}">
+							<ui:repeat value="#{item2.childs}" var="item3">
+								<rich:panelMenuGroup label="#{item3.value}">
+									<ui:repeat value="#{item3.childs}" var="item4">
+												<rich:panelMenuItem label="#{item4.value}"
+													action="commandButton">
+												</rich:panelMenuItem>
+									</ui:repeat>
+								</rich:panelMenuGroup>
+							</ui:repeat>
+						</rich:panelMenuGroup>
+					</ui:repeat>
+				</rich:panelMenuGroup>
+			</ui:repeat>
+
+<!-- 
+			<rich:panelMenuItem label="#{menu.opcion1_2}" action="commandButton">
+				<f:param name="current" value="Item 1.2" />
+			</rich:panelMenuItem>
+			<rich:panelMenuItem label="#{menu.opcion1_3}" action="commandButton">
+				<f:param name="current" value="Item 1.3" />
+			</rich:panelMenuItem>
 			</rich:panelMenuGroup>
 			<rich:panelMenuGroup label="#{menu.opcion2}">
-				<rich:panelMenuItem label="#{menu.opcion2_1}"
-					action="commandButton">
+				<rich:panelMenuItem label="#{menu.opcion2_1}" action="commandButton">
 					<f:param name="current" value="Item 2.1" />
 				</rich:panelMenuItem>
-				<rich:panelMenuItem label="#{menu.opcion2_2}"
-					action="commandButton">
+				<rich:panelMenuItem label="#{menu.opcion2_2}" action="commandButton">
 					<f:param name="current" value="Item 2.2" />
 				</rich:panelMenuItem>
-				<rich:panelMenuItem label="#{menu.opcion2_3}"
-					action="commandButton">
+				<rich:panelMenuItem label="#{menu.opcion2_3}" action="commandButton">
 					<f:param name="current" value="Item 2.3" />
 				</rich:panelMenuItem>
 				<rich:panelMenuGroup label="#{menu.opcion2_4}">
@@ -65,20 +77,19 @@
 				</rich:panelMenuGroup>
 			</rich:panelMenuGroup>
 			<rich:panelMenuGroup label="#{menu.opcion3}">
-				<rich:panelMenuItem label="#{menu.opcion3_1}"
-					action="commandButton">
+				<rich:panelMenuItem label="#{menu.opcion3_1}" action="commandButton">
 					<f:param name="current" value="Item 3.1" />
 				</rich:panelMenuItem>
-				<rich:panelMenuItem label="#{menu.opcion3_2}"
-					action="commandButton">
+				<rich:panelMenuItem label="#{menu.opcion3_2}" action="commandButton">
 					<f:param name="current" value="Item 3.2" />
 				</rich:panelMenuItem>
-				<rich:panelMenuItem label="#{menu.opcion3_3}"
-					action="commandButton">
+				<rich:panelMenuItem label="#{menu.opcion3_3}" action="commandButton">
 					<f:param name="current" value="Item 3.3" />
 				</rich:panelMenuItem>
 			</rich:panelMenuGroup>
+			 -->
 		</rich:panelMenu>
-		</composite:implementation>
+		
+	</composite:implementation>
 </h:body>
 </html>
