--- a/sueDreams/sueWeb/src/main/webapp/resources/componentes/menu.xhtml
+++ b/sueDreams/sueWeb/src/main/webapp/resources/componentes/menu.xhtml
@@ -17,82 +17,15 @@
 	<composite:interface
 		displayName="Input text field with label, input and message components">
 	</composite:interface>
-
 	<composite:implementation>
-		<rich:panelMenu mode="ajax" styleClass="styleMenu"
+		<rich:panelMenu mode="ajax" styleClass="styleMenu" id="menuP"
 			iconExpandedGroup="disc" iconCollapsedGroup="disc"
 			iconExpandedTopGroup="chevronUp" iconGroupTopPosition="right"
 			iconCollapsedTopGroup="chevronDown">
- <rich:panelMenu id="MenuList"  binding="#{beans.menu}" />
-
-<!-- 			<ui:repeat value="#{beans.allMapping.childs}" var="item1">
-				<rich:panelMenuGroup label="#{item1.value}">
-					<ui:repeat value="#{item1.childs}" var="item2">
-						<rich:panelMenuGroup label="#{item2.value}">
-							<ui:repeat value="#{item2.childs}" var="item3">
-								<rich:panelMenuGroup label="#{item3.value}">
-									<ui:repeat value="#{item3.childs}" var="item4">
-												<rich:panelMenuItem label="#{item4.value}"
-													action="commandButton">
-												</rich:panelMenuItem>
-									</ui:repeat>
-								</rich:panelMenuGroup>
-							</ui:repeat>
-						</rich:panelMenuGroup>
-					</ui:repeat>
-					
-				</rich:panelMenuGroup>
-	</ui:repeat>-->
-	
-			
-
-<!-- 
-			<rich:panelMenuItem label="#{menu.opcion1_2}" action="commandButton">
-				<f:param name="current" value="Item 1.2" />
-			</rich:panelMenuItem>
-			<rich:panelMenuItem label="#{menu.opcion1_3}" action="commandButton">
-				<f:param name="current" value="Item 1.3" />
-			</rich:panelMenuItem>
-			</rich:panelMenuGroup>
-			<rich:panelMenuGroup label="#{menu.opcion2}">
-				<rich:panelMenuItem label="#{menu.opcion2_1}" action="commandButton">
-					<f:param name="current" value="Item 2.1" />
-				</rich:panelMenuItem>
-				<rich:panelMenuItem label="#{menu.opcion2_2}" action="commandButton">
-					<f:param name="current" value="Item 2.2" />
-				</rich:panelMenuItem>
-				<rich:panelMenuItem label="#{menu.opcion2_3}" action="commandButton">
-					<f:param name="current" value="Item 2.3" />
-				</rich:panelMenuItem>
-				<rich:panelMenuGroup label="#{menu.opcion2_4}">
-					<rich:panelMenuItem label="#{menu.opcion2_4_1}"
-						action="commandButton">
-						<f:param name="current" value="Item 2.4.1" />
-					</rich:panelMenuItem>
-					<rich:panelMenuItem label="#{menu.opcion2_4_2}"
-						action="commandButton">
-						<f:param name="current" value="Item 2.4.2" />
-					</rich:panelMenuItem>
-					<rich:panelMenuItem label="#{menu.opcion2_4_3}"
-						action="commandButton">
-						<f:param name="current" value="Item 2.4.3" />
-					</rich:panelMenuItem>
-				</rich:panelMenuGroup>
-			</rich:panelMenuGroup>
-			<rich:panelMenuGroup label="#{menu.opcion3}">
-				<rich:panelMenuItem label="#{menu.opcion3_1}" action="commandButton">
-					<f:param name="current" value="Item 3.1" />
-				</rich:panelMenuItem>
-				<rich:panelMenuItem label="#{menu.opcion3_2}" action="commandButton">
-					<f:param name="current" value="Item 3.2" />
-				</rich:panelMenuItem>
-				<rich:panelMenuItem label="#{menu.opcion3_3}" action="commandButton">
-					<f:param name="current" value="Item 3.3" />
-				</rich:panelMenuItem>
-			</rich:panelMenuGroup>
-			 -->
+			<rich:panelMenu styleClass="styleMenu" binding="#{menuBeans.menu}"
+				id="menuH" />
 		</rich:panelMenu>
-		
+
 	</composite:implementation>
 </h:body>
 </html>
