Implementacion j2ee terminada

--- a/sueDreams/sueWeb/src/main/webapp/paginas/ejemplos/formularios/datosPersonalesResults.xhtml
+++ b/sueDreams/sueWeb/src/main/webapp/paginas/ejemplos/formularios/datosPersonalesResults.xhtml
@@ -10,7 +10,7 @@
 	 template="/templates/template.xhtml">
 
 	<ui:define name="aplicacion">
-    <h:outputText value="#{ingresoDatos.nombre1}" />
+    <h:outputText value="#{remoteDatos.cantidad}" />
 	</ui:define>
 
 </ui:composition>
