--- a/sueDreams/sueWeb/src/main/webapp/resources/componentes/menu.xhtml
+++ b/sueDreams/sueWeb/src/main/webapp/resources/componentes/menu.xhtml
@@ -18,7 +18,9 @@
 		displayName="Input text field with label, input and message components">
 	</composite:interface>
 	<composite:implementation>
+	<rich:panelMenu>
 			<rich:panelMenu styleClass="styleMenu" binding="#{menuBeans.menu}"/>
+	</rich:panelMenu>
 	</composite:implementation>
 </h:body>
 </html>
