--- a/sueDreams/sueWeb/src/main/webapp/WEB-INF/flows/documentosPersonales/documentosPersonales.xhtml
+++ b/sueDreams/sueWeb/src/main/webapp/WEB-INF/flows/documentosPersonales/documentosPersonales.xhtml
@@ -18,7 +18,7 @@
     <h:inputText value="#{ingresoDatos.apellido1}" />
     <h:inputText value="#{ingresoDatos.apellido2}" />
     </h:panelGrid>
-    <h:commandButton value="Procesar" action="back" />
+    <h:commandButton id="Boton2" value="Regresar" action="back" />
     <h:panelGrid id="DatosGenerales2" >
     <h:outputLabel value="#{ingresoDatos.nombre1}" />
     <h:outputLabel value="#{ingresoDatos.nombre2}" />
