--- a/sueDreams/sueWeb/src/main/webapp/index.html
+++ b/sueDreams/sueWeb/src/main/webapp/index.html
@@ -1,5 +1,5 @@
 <html>
 <head>
-  <meta http-equiv="Refresh" content="0; URL=spring/inicio">
+  <meta http-equiv="Refresh" content="0; URL=spring/first">
 </head>
 </html>
