Fin Prueba de Renderizado.....Prueba OK

--- a/sueDreams/sueWeb/src/main/webapp/WEB-INF/inicio.xhtml
+++ b/sueDreams/sueWeb/src/main/webapp/WEB-INF/inicio.xhtml
@@ -12,7 +12,7 @@
 
 	<ui:define name="aplicacion">
 		<p>
-		<a href="first">Start your Spring Travel experience</a>
+		<a href="test">Start your Spring Travel experience</a>
 	</p>
 		main
 		
