--- a/sueDreams/sueWeb/src/main/webapp/WEB-INF/flows/ini/iniCriteria.xhtml
+++ b/sueDreams/sueWeb/src/main/webapp/WEB-INF/flows/ini/iniCriteria.xhtml
@@ -1,24 +1,59 @@
-<?xml version="1.0" encoding="UTF-8"?>
-<!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Transitional//EN" "http://www.w3.org/TR/xhtml1/DTD/xhtml1-transitional.dtd">
-
-
-
-<h:form id="hotels"
-    xmlns="http://www.w3.org/1999/xhtml"
-	xmlns:ui="http://java.sun.com/jsf/facelets"
+<f:view xmlns="http://www.w3.org/1999/xhtml"
 	xmlns:f="http://java.sun.com/jsf/core"
 	xmlns:h="http://java.sun.com/jsf/html"
 	xmlns:rich="http://richfaces.org/rich"
-	xmlns:a4j="http://richfaces.org/a4j"
->	
-	<h:panelGrid id="idCriteria" >
-    <h:inputText value="#{ingresoDatos.nombre1}" />
-    <h:inputText value="#{ingresoDatos.nombre2}" />
-    <h:inputText value="#{ingresoDatos.apellido1}" />
-    <h:inputText value="#{ingresoDatos.apellido2}" />
-    </h:panelGrid>
-    <h:commandButton value="Proximo" action="proximo" />
-    <h:commandButton value="Regresar" action="backIns"/>
-    <a4j:commandButton id="botonTest" immediate="false" value="Procesar" action="procesar" reRender="panelResults" status="ajaxStatus" />
-</h:form>	
+	xmlns:ui="http://java.sun.com/jsf/facelets"
+	xmlns:a4j="http://richfaces.org/a4j" >
 	
+		
+		
+		<h:panelGrid columns="3">
+				<h:outputText value="Name:" />
+				<h:inputText value="#{ingresoDatos.nombre1}" />
+				<br />
+				<a4j:commandButton value="A4J button with render"
+					render="#{flowRenderFragments}" action="doit" />
+				<br />
+				<h:commandButton value="h:CommandButton with render2" action="doit">
+					<f:ajax render="#{flowRenderFragments}" execute="@form" />
+				</h:commandButton>
+			</h:panelGrid>
+			
+			
+			<h:panelGrid columns="3">
+				<h:outputText value="Name:" />
+				<h:inputText value="#{demoBean.name}" />
+				<br />
+				<a4j:commandButton value="A4J button with render"
+					render="#{flowRenderFragments}" action="doit" />
+				<br />
+				<h:commandButton value="h:CommandButton with render" action="doit2">
+					<f:ajax render="#{flowRenderFragments}" execute="@form" />
+				</h:commandButton>
+			</h:panelGrid>
+
+			<br />
+
+			<a4j:outputPanel id="panel1">
+				<rich:panel header="Panel1" rendered="#{not empty demoBean.name}">
+
+					<h:outputText value="#{demoBean.currentDate}" />
+					<br />
+					<h:outputText value="Hello #{demoBean.name} !" />
+				</rich:panel>
+			</a4j:outputPanel>
+
+			<a4j:outputPanel id="panel2">
+				<rich:panel header="Panel2 ">
+					<h:outputText value="#{demoBean.currentDate}"
+						style="background-color: yellow" />
+				</rich:panel>
+			</a4j:outputPanel>
+
+			<rich:panel header="Panel3" id="panel3">
+				<h:outputText value="#{demoBean.currentDate}" />
+			</rich:panel>
+
+			<h:commandButton id="endMe" action="end" value="End !" />
+</f:view>
+
