Configuracion J2EE con Spring

--- a/sueDreams/sueWeb/src/main/webapp/WEB-INF/flows/ini/iniCriteria.xhtml
+++ b/sueDreams/sueWeb/src/main/webapp/WEB-INF/flows/ini/iniCriteria.xhtml
@@ -8,6 +8,9 @@
 		
 		
 		<h:panelGrid columns="3">
+		<h:outputText value="bean" />
+		<h:outputText value="prueba:" />
+		<h:outputText value="#{ingresoBean.cantidad}" />
 				<h:outputText value="Name:" />
 				<h:inputText value="#{ingresoDatos.nombre1}" />
 				<br />
