--- a/projectPrimeFaces/principal/principal-web/src/main/webapp/administracionEstudiantes.xhtml
+++ b/projectPrimeFaces/principal/principal-web/src/main/webapp/administracionEstudiantes.xhtml
@@ -5,10 +5,12 @@
 	xmlns:c="http://java.sun.com/jstl/core"
 	xmlns:p="http://primefaces.org/ui" template="/WEB-INF/templates/template.xhtml">
 	<ui:define name="aplicacion">
-
 			<h:form id="form">
-					<p:commandButton value="pruebas"
-						action="pruebas" />
+			<p:growl id="mensajes"/>
+	
+				<h:panelGroup  id="mensajesParticulares">
+			<h:inputText  ></h:inputText>
+				</h:panelGroup>
 			</h:form>
 </ui:define>
 </ui:composition>
