--- a/bootstrapProject/saludcoop/administracion/src/main/webapp/jsp/public/indexJSF.xhtml
+++ b/bootstrapProject/saludcoop/administracion/src/main/webapp/jsp/public/indexJSF.xhtml
@@ -16,13 +16,12 @@
         </script>
     </ui:define>
     <ui:define name="body">
-
         <div class="col-lg-offset-3 col-lg-6 col-sm-offset-3 col-sm-6 col-md-offset-3 col-md-6 col-xs-12">
             <div class="well">
                 <form class="form-horizontal" id="formLogin" prependId="false" method="post"
                       action="#{facesContext.externalContext.requestContextPath}/j_spring_security_check">
                     <fieldset>
-                        <legend>Login</legend>
+                        <legend>Login Faces</legend>
                         <div class="col-lg-offset-2 col-lg-10" id="errors"></div>
                         <div class="form-group">
                             <p:outputLabel for="j_username" styleClass="col-lg-2 control-label" value="#{msg['label.user']}" />
